[package]

name = "natural"
version = "0.3.0"
authors = [ "chris@cjqed.com", "curlywurlycraig@gmail.com" ]
license = "MIT"
description = "Pure rust library for natural language processing."
readme = "README.md"
categories = ["text-processing", "algorithms"]
repository = "https://github.com/cjqed/rs-natural"

[badges]
travis-ci = { repository = "https://travis-ci.org/cjqed/rs-natural" }
