[package]

name = "natural"
version = "0.5.0"
authors = [ "chris@cjqed.com", "curlywurlycraig@gmail.com", "travissturzl@gmail.com" ]
license = "MIT"
description = "Pure rust library for natural language processing."
readme = "README.md"
categories = ["text-processing", "algorithms"]
repository = "https://github.com/cjqed/rs-natural"

[profile.release]
lto = true

[badges]
travis-ci = { repository = "https://travis-ci.org/cjqed/rs-natural" }

[features]
default = []
serde_support = ["serde"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
rust-stemmers = "1.2.0"
